--- a/.gitignore
+++ b/.gitignore
@@ -324,3 +324,85 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+# ===============================
+# Dependencies
+# ===============================
+node_modules/
+.pnpm-store/
+.yarn/
+.yarn-cache/
+.yarn-unplugged/
+.yarn-integrity
+
+# ===============================
+# Build outputs
+# ===============================
+dist/
+build/
+out/
+coverage/
+
+# ===============================
+# Environment variables
+# ===============================
+.env
+.env.*
+!.env.example
+
+# ===============================
+# Logs
+# ===============================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+logs/
+*.log
+
+# ===============================
+# Vite / React / Next cache
+# ===============================
+.vite/
+.cache/
+.next/
+.vercel/
+.netlify/
+
+# ===============================
+# TypeScript
+# ===============================
+*.tsbuildinfo
+
+# ===============================
+# Testing
+# ===============================
+coverage/
+playwright-report/
+test-results/
+
+# ===============================
+# IDE / Editor
+# ===============================
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+
+# ===============================
+# OS generated files
+# ===============================
+.DS_Store
+.DS_Store?
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# ===============================
+# Misc
+# ===============================
+*.pem
+*.key
+*.crt
+*.local
