--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "motion": "^12.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
